<resources>
    <string name="app_name">Gerichtesammler</string>
    <string name="add_new_dish">Neues Gericht hinzufügen</string>
    <string name="filter_dishes">Gerichte anordnen</string>
    <string name="action_sort">Sortieren</string>
    <string name="action_filter">Filtern</string>
    <string name="action_edit_categories">Kategorien bearbeiten</string>
    <string name="action_delete">Löschen</string>
    <string name="action_delete_confirm_msg">Möchten Sie das Gericht wirklich löschen?</string>
    <string name="action_chose_or_take_photo">Ein vorhandenes Foto auswählen oder ein neues aufnehmen?</string>
    <string name="action_remove_pic_from_selection">Ausgewähltes Foto aus der Auswahl entfernen?</string>
    <string name="action_max_recipe_photos_reached">Es können nicht mehr als 5 Fotos ausgewählt werden!\nFotos bereinigen?</string>
    <string name="action_chose_photo">Foto auswählen</string>
    <string name="action_take_photo">Foto aufnehmen</string>
    <string name="action_delete_category">Kategorie löschen?</string>
    <string name="hint_dish_name">Gerichtename</string>
    <string name="hint_dish_example">z.B. Spaghetti</string>
    <string name="hint_dish_rating">Bewertung</string>
    <string name="hint_dish_type">Art</string>
    <string name="hint_dish_duration">Zubereitungszeit in Stunden (optional)</string>
    <string name="hint_dish_duration_example">z.B. 1,5</string>
    <string name="hint_dish_recipe">Rezept Text oder Foto (optional)</string>
    <string name="warning_affected_dishes_category_change">Warnung: Dies betrifft %1$d Gericht(e)!</string>
    <string name="dish_duration">Zubereitungszeit</string>
    <string name="dish_duration_short">Dauer</string>
    <string name="error_field_required">Dieses Feld ist erforderlich!</string>
    <string name="error_field_invalid_format">Ungültiges Format!</string>
    <string name="error_number_above_100">Eingabe darf nicht über 100 Prozent sein!</string>
    <string name="error_number_below_50">Eingabe darf nicht unter 50 Prozent sein!</string>
    <string name="error_category_lower_limit">Es dürfen nicht weniger als 3 Kategorien existieren!</string>
    <string name="save">Speichern</string>
    <string name="delete">Löschen</string>
    <string name="confirm">Bestätigen</string>
    <string name="close">Schliessen</string>
    <string name="select">Auswählen</string>
    <string name="cancel">Abbrechen</string>
    <string name="no_dishes">Keine Gerichte</string>
    <string name="my_dish">Mein Gericht</string>
    <string name="send_email">E-Mail senden</string>
    <string name="dish_recipe">Rezept</string>
    <string name="no_dish_recipe_available">Kein Rezept vorhanden!</string>
    <string name="edit_dish">Bearbeiten</string>
    <string name="send_dish_mail">Teilen</string>
    <string name="show_dish_recipe">Rezept lesen</string>
    <string name="mark_dish_as_cooked">Als zubereitet markieren</string>
    <string name="save_recipe">Rezept festhalten</string>
    <string name="cooking">Zubereitung</string>
    <string name="last_cooked">Zuletzt</string>
    <string name="circa">c.a.</string>
    <string name="hours">Stunden</string>
    <string name="hours_short">Std.</string>
    <string name="minutes_short">Min.</string>
    <string name="not_available"> - </string>
    <string name="my_category">Meine Kategorie</string>
    <string name="rating_1">Gut</string>
    <string name="rating_2">Sehr gut</string>
    <string name="rating_3">Ausgezeichnet</string>
    <string name="rating_4">Vorzüglich</string>
    <string name="dish_meat">Fleisch</string>
    <string name="dish_veggie">Vegetarisch</string>
    <string name="dish_fish">Fisch</string>
    <string name="dish_soup">Suppe</string>
    <string name="dish_dessert">Süßspeise</string>
    <string name="sort_by">"Sortieren nach:"</string>
    <string name="sort_type_name">Name</string>
    <string name="sort_type_rating">Bewertung</string>
    <string name="sort_type_category">Kategorie</string>
    <string name="sort_type_duration">Zubereitungsdauer</string>
    <string name="sort_type_last_cooked">Zuletzt zubereitet</string>

</resources>
