<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DishEditActivity">

        <TextView
            android:id="@+id/dish_edit_input_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_dish_name"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dish_edit_input_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dish_edit_input_editText"
                android:layout_width="match_parent"
                android:maxLength="30"
                android:layout_height="50dp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/dish_type_textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hint_dish_type"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/dish_type_spinner2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:prompt="@string/hint_dish_rating" />

        <TextView
            android:id="@+id/dish_duration_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_dish_duration"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dish_duration_input_layout2"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dish_duration_editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/dish_rating_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_dish_rating"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/dish_rating_spinner2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:prompt="@string/hint_dish_recipe" />

        <TextView
            android:id="@+id/dish_recipe_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_dish_recipe"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dish_recipe_editText2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:singleLine="false"></EditText>

            <ImageButton
                android:id="@+id/dish_recipe_add_picture_btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSelectPhoto"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipeImageViewHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/save_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSave"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>